fixed error weather location was not showing

--- a/assets/css/styleSheet.css
+++ b/assets/css/styleSheet.css
@@ -42,6 +42,7 @@ header h1 {
     margin:0 10px;
     border-radius:8px;
     text-align:center;
+    cursor:pointer;
     padding:9px;
     background-color: aquamarine;
 }
